--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            Bellabeat
+longtitle:        Wellness Case Study 2
+author:           Sandra Mendoza
+email:            mendosabea@gmail.com
 description: >
-  Build Jekyll site with the GitBook style.
+  Bellabeat data analysis case study!.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
+url:              'https://sandrhymend.github.io/caseStudy/'
+baseurl:          ''
 rss:              RSS
 
 toc:
