Create posts and notebook.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Configurations
-title:            Bellabeat
-longtitle:        Wellness Case Study 2
+title:            Bellabeat Case Study
+longtitle:        Google Data Analytics Case Study
 author:           Sandra Mendoza
 email:            mendosabea@gmail.com
 description: >
