--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ toc:
   h_max: 3
 
 # markdown render engine.
+future: false
 markdown:         kramdown
 kramdown:
   auto_ids:               true
