--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Configurations
 title:            Bellabeat Case Study
 longtitle:        Google Data Analytics Case Study
-author:           Sandra Mendoza
+author:           Sandra Perez
 email:            mendosabea@gmail.com
-description: >
+description:
   Bellabeat data analysis case study!.
 
 version:          1.0
