--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ description:
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sandrhymend.github.io'
-baseurl:          '/caseStudy'
+url:              https://sandrhymend.github.io
+baseurl:          /caseStudy
 rss:              RSS
 
 toc:
@@ -36,7 +36,7 @@ syntax_highlighter_style: colorful
 markdown_ext:     markdown,mkdown,mkdn,mkd,md
 
 # Permalinks
-permalink:        /:categories/:year-:month-:day-:title:output_ext
+permalink:        /:year-:month-:day-:title:output_ext
 
 exclude:
   - _drafts
